--- a/pom.xml
+++ b/pom.xml
@@ -570,6 +570,16 @@
 					<scope>test</scope>
 				</dependency>
 			</dependencies>
+			<repositories>
+				<repository>
+					<id>apache</id>
+					<url>https://repository.apache.org/content/groups/snapshots</url>
+					<snapshots>
+						<enabled>true</enabled>
+						<updatePolicy>always</updatePolicy>
+					</snapshots>
+				</repository>
+			</repositories>
 			<build>
 				<plugins>
 					<plugin>
@@ -598,9 +608,9 @@
 								<configuration>
 									<artifactItems>
 										<artifactItem>
-											<groupId>org.glassfish</groupId>
-											<artifactId>javax.faces</artifactId>
-											<version>2.3.0</version>
+											<groupId>org.apache.myfaces.core</groupId>
+											<artifactId>myfaces-bundle</artifactId>
+											<version>2.3.0-SNAPSHOT</version>
 											<type>jar</type>
 											<outputDirectory>${project.build.directory}/apache-tomee-webprofile-${test.tomee.version}/lib</outputDirectory>
 										</artifactItem>
@@ -612,9 +622,10 @@
 					<plugin>
 						<groupId>org.codehaus.mojo</groupId>
 						<artifactId>truezip-maven-plugin</artifactId>
+						<version>1.2</version>
 						<executions>
 							<execution>
-								<id>remove-tomee-myfaces-files</id>
+								<id>remove-tomee-jsf22-files</id>
 								<phase>pre-integration-test</phase>
 								<goals>
 									<goal>remove</goal>
