--- a/pom.xml
+++ b/pom.xml
@@ -95,13 +95,13 @@
 		<dependency>
 			<groupId>javax.validation</groupId>
 			<artifactId>validation-api</artifactId>
-			<version>2.0.0.Beta2</version><!-- TODO: update to 2.0 final once available. -->
+			<version>2.0.0.CR3</version><!-- TODO: update to 2.0 final once available. -->
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>javax.json</groupId>
 			<artifactId>javax.json-api</artifactId>
-			<version>1.1.0-M2</version><!-- TODO: update to 1.1 final once available. -->
+			<version>1.1</version>
 			<scope>provided</scope>
 		</dependency>
 
@@ -570,16 +570,6 @@
 					<scope>test</scope>
 				</dependency>
 			</dependencies>
-			<repositories>
-				<repository>
-					<id>apache</id>
-					<url>https://repository.apache.org/content/groups/snapshots</url>
-					<snapshots>
-						<enabled>true</enabled>
-						<updatePolicy>always</updatePolicy>
-					</snapshots>
-				</repository>
-			</repositories>
 			<build>
 				<plugins>
 					<plugin>
@@ -610,7 +600,7 @@
 										<artifactItem>
 											<groupId>org.apache.myfaces.core</groupId>
 											<artifactId>myfaces-bundle</artifactId>
-											<version>2.3.0-SNAPSHOT</version>
+											<version>2.3.0-beta</version>
 											<type>jar</type>
 											<outputDirectory>${project.build.directory}/apache-tomee-webprofile-${test.tomee.version}/lib</outputDirectory>
 										</artifactItem>
