--- a/pom.xml
+++ b/pom.xml
@@ -599,8 +599,22 @@
 									<artifactItems>
 										<artifactItem>
 											<groupId>org.apache.myfaces.core</groupId>
-											<artifactId>myfaces-bundle</artifactId>
+											<artifactId>myfaces-api</artifactId>
 											<version>2.3.0-beta</version>
+											<type>jar</type>
+											<outputDirectory>${project.build.directory}/apache-tomee-webprofile-${test.tomee.version}/lib</outputDirectory>
+										</artifactItem>
+										<artifactItem>
+											<groupId>org.apache.myfaces.core</groupId>
+											<artifactId>myfaces-impl</artifactId>
+											<version>2.3.0-beta</version>
+											<type>jar</type>
+											<outputDirectory>${project.build.directory}/apache-tomee-webprofile-${test.tomee.version}/lib</outputDirectory>
+										</artifactItem>
+										<artifactItem>
+											<groupId>commons-codec</groupId>
+											<artifactId>commons-codec</artifactId>
+											<version>1.10</version>
 											<type>jar</type>
 											<outputDirectory>${project.build.directory}/apache-tomee-webprofile-${test.tomee.version}/lib</outputDirectory>
 										</artifactItem>
