Don't interpret javadoc warnings as errors.

--- a/pom.xml
+++ b/pom.xml
@@ -335,6 +335,9 @@
 						<goals>
 							<goal>jar</goal>
 						</goals>
+						<configuration>
+							<additionalparam>-Xdoclint:none</additionalparam>
+						</configuration>
 					</execution>
 				</executions>
 			</plugin>
