--- a/pom.xml
+++ b/pom.xml
@@ -72,9 +72,9 @@
 		<maven.source.excludeResources>true</maven.source.excludeResources>
 
 		<!-- Test server versions. -->
-		<test.wildfly.version>11.0.0.CR1</test.wildfly.version> <!-- TODO: update to Java EE 8 compatible version -->
-		<test.tomee.version>7.0.3</test.tomee.version> <!-- TODO: update to Java EE 8 compatible version -->
-		<test.payara.version>5.0.0.Alpha1</test.payara.version>
+		<test.wildfly.version>11.0.0.Final</test.wildfly.version> <!-- TODO: update to Java EE 8 compatible version -->
+		<test.tomee.version>7.0.4</test.tomee.version> <!-- TODO: update to Java EE 8 compatible version -->
+		<test.payara.version>5.0.0.Alpha3</test.payara.version>
 	</properties>
 
 	<dependencies>
@@ -490,7 +490,7 @@
 										<artifactItem>
 											<groupId>org.glassfish</groupId>
 											<artifactId>javax.faces</artifactId>
-											<version>2.3.2</version>
+											<version>2.3.3</version>
 											<type>jar</type>
 											<outputDirectory>${project.build.directory}/wildfly-${test.wildfly.version}/modules/system/layers/base/javax/faces/api/main</outputDirectory>
 											<destFileName>jboss-jsf-api_2.2_spec-2.2.13.jar</destFileName> <!-- Reuse same file name to make our life easier (no editing of module.xml necessary). -->
@@ -499,7 +499,7 @@
 										<artifactItem>
 											<groupId>org.glassfish</groupId>
 											<artifactId>javax.faces</artifactId>
-											<version>2.3.2</version>
+											<version>2.3.3</version>
 											<type>jar</type>
 											<outputDirectory>${project.build.directory}/wildfly-${test.wildfly.version}/modules/system/layers/base/com/sun/jsf-impl/main</outputDirectory>
 											<destFileName>jsf-impl-2.2.13.SP4.jar</destFileName> <!-- Reuse same file name to make our life easier (no editing of module.xml necessary). -->
@@ -642,8 +642,8 @@
 									<fileset>
 										<directory>${project.build.directory}/apache-tomee-webprofile-${test.tomee.version}/lib</directory>
 										<includes>
-											<include>myfaces-api-2.2.11.jar</include>
-											<include>myfaces-impl-2.2.11.jar</include>
+											<include>myfaces-api-2.2.12.jar</include>
+											<include>myfaces-impl-2.2.12.jar</include>
 										</includes>
 									</fileset>
 								</configuration>
