--- a/pom.xml
+++ b/pom.xml
@@ -72,9 +72,9 @@
 		<maven.source.excludeResources>true</maven.source.excludeResources>
 
 		<!-- Test server versions. -->
-		<test.wildfly.version>11.0.0.Final</test.wildfly.version> <!-- TODO: update to Java EE 8 compatible version -->
+		<test.wildfly.version>12.0.0.Final</test.wildfly.version>
 		<test.tomee.version>7.0.4</test.tomee.version> <!-- TODO: update to Java EE 8 compatible version -->
-		<test.payara.version>5.0.0.Alpha3</test.payara.version>
+		<test.payara.version>5.Beta2</test.payara.version>
 	</properties>
 
 	<dependencies>
@@ -313,7 +313,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-javadoc-plugin</artifactId>
-				<version>2.10.4</version>
+				<version>3.0.0</version>
 				<configuration>
 					<javadocVersion>${javadoc.version}</javadocVersion>
 					<notimestamp>true</notimestamp>
@@ -400,7 +400,7 @@
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-dependency-plugin</artifactId>
-					<version>3.0.1</version>
+					<version>3.0.2</version>
 					<executions>
 						<execution>
 							<phase>process-test-classes</phase>
@@ -416,7 +416,7 @@
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-failsafe-plugin</artifactId>
-					<version>2.19.1</version>
+					<version>2.20.1</version>
 					<executions>
 						<execution>
 							<goals>
@@ -451,7 +451,7 @@
 				<dependency>
 					<groupId>org.wildfly.arquillian</groupId>
 					<artifactId>wildfly-arquillian-container-managed</artifactId>
-					<version>2.0.2.Final</version>
+					<version>2.1.0.Final</version>
 					<scope>test</scope>
 				</dependency>
 			</dependencies>
@@ -471,74 +471,6 @@
 											<type>zip</type>
 										</artifactItem>
 									</artifactItems>
-								</configuration>
-							</execution>
-							<execution>
-								<id>upgrade-wildfly-to-jsf23</id>
-								<phase>pre-integration-test</phase>
-								<goals>
-									<goal>copy</goal>
-								</goals>
-								<configuration>
-									<artifactItems>
-										<artifactItem>
-											<groupId>org.glassfish</groupId>
-											<artifactId>javax.faces</artifactId>
-											<version>2.3.3</version>
-											<type>jar</type>
-											<outputDirectory>${project.build.directory}/wildfly-${test.wildfly.version}/modules/system/layers/base/javax/faces/api/main</outputDirectory>
-											<destFileName>jboss-jsf-api_2.2_spec-2.2.13.jar</destFileName> <!-- Reuse same file name to make our life easier (no editing of module.xml necessary). -->
-											<overWrite>true</overWrite>
-										</artifactItem>
-										<artifactItem>
-											<groupId>org.glassfish</groupId>
-											<artifactId>javax.faces</artifactId>
-											<version>2.3.3</version>
-											<type>jar</type>
-											<outputDirectory>${project.build.directory}/wildfly-${test.wildfly.version}/modules/system/layers/base/com/sun/jsf-impl/main</outputDirectory>
-											<destFileName>jsf-impl-2.2.13.SP4.jar</destFileName> <!-- Reuse same file name to make our life easier (no editing of module.xml necessary). -->
-											<overWrite>true</overWrite>
-										</artifactItem>
-									</artifactItems>
-								</configuration>
-							</execution>
-						</executions>
-					</plugin>
-					<plugin>
-						<groupId>org.codehaus.mojo</groupId>
-						<artifactId>truezip-maven-plugin</artifactId>
-						<version>1.2</version>
-						<executions>
-							<execution>
-								<id>repack-wildfly-jsf23-api</id>
-								<phase>pre-integration-test</phase>
-								<goals>
-									<goal>remove</goal>
-								</goals>
-								<configuration>
-									<fileset>
-										<directory>${project.build.directory}/wildfly-${test.wildfly.version}/modules/system/layers/base/javax/faces/api/main/jboss-jsf-api_2.2_spec-2.2.13.jar</directory>
-										<excludes>
-											<exclude>javax/**</exclude>
-											<exclude>META-INF/MANIFEST.MF</exclude>
-										</excludes>
-									</fileset>
-								</configuration>
-							</execution>
-							<execution>
-								<id>repack-wildfly-jsf23-impl</id>
-								<phase>pre-integration-test</phase>
-								<goals>
-									<goal>remove</goal>
-								</goals>
-								<configuration>
-									<fileset>
-										<directory>${project.build.directory}/wildfly-${test.wildfly.version}/modules/system/layers/base/com/sun/jsf-impl/main/jsf-impl-2.2.13.SP4.jar</directory>
-										<excludes>
-											<exclude>com/**</exclude>
-											<exclude>META-INF/**</exclude>
-										</excludes>
-									</fileset>
 								</configuration>
 							</execution>
 						</executions>
@@ -664,7 +596,7 @@
 				<dependency>
 					<groupId>org.jboss.arquillian.container</groupId>
 					<artifactId>arquillian-glassfish-managed-3.1</artifactId>
-					<version>1.0.0.Final</version>
+					<version>1.0.2</version>
 					<scope>test</scope>
 				</dependency>
 			</dependencies>
