Implement @JSParam annotation and injection support
This adds support for client-side evaulated JavaScript expressions. The
result of those expressions are injected into the managed bean of the
client once a page is loaded and the expressions are evaluated.

--- a/pom.xml
+++ b/pom.xml
@@ -78,7 +78,17 @@
 	</properties>
 
 	<dependencies>
-
+		<!-- Apache Commons dependencies. -->
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+			<version>3.8.1</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-collections4</artifactId>
+			<version>4.3</version>
+		</dependency>
 		<!-- Java EE 8 dependencies. -->
 		<dependency>
 			<groupId>javax.faces</groupId>
