--- a/pom.xml
+++ b/pom.xml
@@ -61,7 +61,7 @@
 
 		<!-- Java versions. -->
 		<javase.version>11</javase.version>
-		<jakartaee.version>9.0.0-RC1</jakartaee.version>
+		<jakartaee.version>9</jakartaee.version>
 
 		<!-- Essential Maven defaults. -->
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -71,6 +71,7 @@
 		<maven.source.excludeResources>true</maven.source.excludeResources>
 
 		<!-- Test server versions. -->
+		<test.tomcat.version>10.0.0-M4</test.tomcat.version>
 		<test.wildfly.version>19.0.0.Final</test.wildfly.version> <!-- TODO: JEE9 compatible version -->
 		<test.tomee.version>8.0.1</test.tomee.version> <!-- TODO: JEE9 compatible version -->
 		<test.payara.version>5.201</test.payara.version> <!-- TODO: JEE9 compatible version -->
@@ -120,7 +121,7 @@
 		<dependency>
 			<groupId>jakarta.platform</groupId>
 			<artifactId>jakarta.jakartaee-web-api</artifactId>
-			<version>${jakartaee.version}</version>
+			<version>9.0.0-RC1</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
@@ -318,7 +319,9 @@
 					<splitindex>true</splitindex>
 					<doctitle>OmniFaces API documentation</doctitle>
 					<links>
-						<link>https://javaee.github.io/javaee-spec/javadocs/</link>
+						<!-- TODO: this is not yet available. 
+						<link>https://jakarta.ee/specifications/platform/${jakartaee.version}/apidocs/</link>
+						 -->
 					</links>
 				</configuration>
 				<executions>
