--- a/pom.xml
+++ b/pom.xml
@@ -140,7 +140,7 @@
 		<dependency>
 			<groupId>org.jboss.arquillian.graphene</groupId>
 			<artifactId>graphene-webdriver</artifactId>
-			<version>2.1.0.Final</version>
+			<version>2.1.0.Final</version> <!-- Newer versions appear to intermittently fail in RequestGuard -->
 			<type>pom</type>
 			<scope>test</scope>
 		</dependency>
@@ -153,21 +153,21 @@
 			<dependency>
 				<groupId>org.jboss.arquillian</groupId>
 				<artifactId>arquillian-bom</artifactId>
-				<version>1.1.13.Final</version>
+				<version>1.4.0.Final</version>
 				<type>pom</type>
 				<scope>import</scope>
 			</dependency>
 			<dependency>
 				<groupId>org.jboss.arquillian.extension</groupId>
 				<artifactId>arquillian-drone-bom</artifactId>
-				<version>2.0.1.Final</version>
+				<version>2.0.1.Final</version> <!-- Newer versions are incompatible with graphene-webdriver:2.1.0.Final -->
 				<type>pom</type>
 				<scope>import</scope>
 			</dependency>
 			<dependency>
 				<groupId>org.jboss.arquillian.selenium</groupId>
 				<artifactId>selenium-bom</artifactId>
-				<version>3.3.1</version>
+				<version>3.13.0</version>
 				<type>pom</type>
 				<scope>import</scope>
 			</dependency>
