--- a/pom.xml
+++ b/pom.xml
@@ -138,9 +138,15 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
+			<groupId>org.jboss.shrinkwrap.resolver</groupId>
+			<artifactId>shrinkwrap-resolver-depchain</artifactId>
+			<type>pom</type>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
 			<groupId>org.jboss.arquillian.graphene</groupId>
 			<artifactId>graphene-webdriver</artifactId>
-			<version>2.1.0.Final</version> <!-- Newer versions appear to intermittently fail in RequestGuard -->
+			<version>2.1.0.Final</version> <!-- Newer versions appear to intermittently fail in RequestGuard and not be fully compatible with websockets -->
 			<type>pom</type>
 			<scope>test</scope>
 		</dependency>
@@ -153,7 +159,7 @@
 			<dependency>
 				<groupId>org.jboss.arquillian</groupId>
 				<artifactId>arquillian-bom</artifactId>
-				<version>1.4.0.Final</version>
+				<version>1.6.0.Final</version>
 				<type>pom</type>
 				<scope>import</scope>
 			</dependency>
@@ -163,6 +169,13 @@
 				<version>2.0.1.Final</version> <!-- Newer versions are incompatible with graphene-webdriver:2.1.0.Final -->
 				<type>pom</type>
 				<scope>import</scope>
+			</dependency>
+			<dependency>
+				<groupId>org.jboss.shrinkwrap.resolver</groupId>
+				<artifactId>shrinkwrap-resolver-bom</artifactId>
+				<version>3.1.4</version>
+				<type>pom</type>
+				<scope>test</scope>
 			</dependency>
 			<dependency>
 				<groupId>org.jboss.arquillian.selenium</groupId>
