--- a/pom.xml
+++ b/pom.xml
@@ -252,6 +252,7 @@
 								<jsSourceFile>inputfile.unminified.js</jsSourceFile>
 								<jsSourceFile>form.unminified.js</jsSourceFile>
 								<jsSourceFile>hashparam.unminified.js</jsSourceFile>
+								<jsSourceFile>scriptparam.unminified.js</jsSourceFile>
 							</jsSourceFiles>
 							<jsFinalFile>omnifaces.js</jsFinalFile>
 						</configuration>
