Fix homepage URL to be HTTPS

--- a/pom.xml
+++ b/pom.xml
@@ -16,10 +16,10 @@
 
 	<name>OmniFaces</name>
 	<description>Jakarta Faces 2.3+ utility library</description>
-	<url>http://omnifaces.org</url>
+	<url>https://omnifaces.org</url>
 	<organization>
 		<name>OmniFaces</name>
-		<url>http://omnifaces.org</url>
+		<url>https://omnifaces.org</url>
 	</organization>
 	<inceptionYear>2012</inceptionYear>
 
